# ToyCarSimulator

./: Cargo.toml  readme.md
media/1/: main.c4d  tex.psd
media/2/: main.c4d  main.mtl
media/3/: main.c4d  main.mtl  tex.psd
media/4/: main.c4d  tex.psd
media/5/: main.c4d  main.mtl  tex.psd
src/: main.rs  map.rs
